--- a/build.gradle
+++ b/build.gradle
@@ -12,10 +12,18 @@ repositories {
 dependencies {
     implementation 'org.projectlombok:lombok:1.18.22'
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
-    // https://mvnrepository.com/artifact/com.github.javaparser/javaparser-core
     implementation group: 'com.github.javaparser', name: 'javaparser-core', version: '3.25.8'
-    // https://mvnrepository.com/artifact/com.github.javaparser/javaparser-symbol-solver-core
+//    implementation group: 'com.github.javaparser', name: 'javaparser-core', version: '3.24.9'
     implementation group: 'com.github.javaparser', name: 'javaparser-symbol-solver-core', version: '3.25.8'
+//    implementation group: 'com.github.javaparser', name: 'javaparser-symbol-solver-core', version: '3.24.9'
+
+    implementation 'com.github.jsqlparser:jsqlparser:4.7'
+    implementation group: 'com.github.jsqlparser', name: 'jsqlparser', version: '4.7'
+    implementation "log4j:log4j:1.2.17"
+    implementation group: 'org.apache.ibatis', name: 'ibatis-sqlmap', version: '3.0-beta-10'
+
+
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.9.0'
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 
