--- a/build.gradle
+++ b/build.gradle
@@ -6,33 +6,36 @@ group = 'org.kryun.symbol'
 version = '1.0-SNAPSHOT'
 
 repositories {
+    maven { url 'https://repo.gradle.org/gradle/libs-releases' }
+    maven {
+        url "http://192.168.9.12:8081/repository/maven-releases"
+        allowInsecureProtocol true
+    }
+    maven { url 'https://jitpack.io' }
     mavenCentral()
 }
 
 dependencies {
     implementation 'org.projectlombok:lombok:1.18.22'
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
+
     implementation group: 'com.github.javaparser', name: 'javaparser-core', version: '3.25.8'
-//    implementation group: 'com.github.javaparser', name: 'javaparser-core', version: '3.24.9'
     implementation group: 'com.github.javaparser', name: 'javaparser-symbol-solver-core', version: '3.25.8'
-//    implementation group: 'com.github.javaparser', name: 'javaparser-symbol-solver-core', version: '3.24.9'
 
-    implementation 'com.github.jsqlparser:jsqlparser:4.7'
-    implementation group: 'com.github.jsqlparser', name: 'jsqlparser', version: '4.7'
-    implementation "log4j:log4j:1.2.17"
-    implementation group: 'org.apache.ibatis', name: 'ibatis-sqlmap', version: '3.0-beta-10'
+    implementation group: 'org.apache.poi', name: 'poi', version: '5.2.5'
+    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.5'
 
-
+    implementation "com.tmax:super-app-server:0.4.0"
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.9.0'
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation group: 'org.mybatis', name: 'mybatis', version: '3.5.9'
+    implementation 'io.netty:netty-all:4.1.78.Final'
+
+//    implementation "org.apache.tomcat:tomcat-catalina:9.0.1"
 
     // log4j
     implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.30'
-    // https://mvnrepository.com/artifact/org.apache.poi/poi
-    implementation group: 'org.apache.poi', name: 'poi', version: '5.2.5'
-    // https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
-    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.5'
+
+
 }
 
 test {
